@@ -16,6 +16,14 @@
 	<properties>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+		<jacoco.version>0.8.6</jacoco.version>
+	    <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+        <sonar.language>java</sonar.language>
+        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
+        <sonar.sources>src/main</sonar.sources>
+        <sonar.tests>src/test</sonar.tests>
+        <sonar.java.binaries>target/classes</sonar.java.binaries>
+        <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -147,6 +155,20 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+<groupId>org.apache.maven.plugins</groupId>
+<artifactId>maven-surefire-plugin</artifactId>
+<version>2.14.1</version>
+<configuration>
+	       <!-- <argLine>${surefireArgLine}</argLine>--> <!-- Include the argLine here -->
+    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+
+<includes>
+<include>**/*Test.java</include>
+</includes>
+	
+</configuration>
+</plugin>
 
 
 		</plugins>
